unit_tests/preprocessor/errors/redefinition-file.correct
preprocessor/errors/redefinition-file:1: warning: '__FILE__' already defined
